fix: use appropriate status code and message