@@ -9,6 +9,15 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Global CORS configuration for the Smart E-Commerce API.
+ * <p>
+ * Allowed origins:
+ * - http://localhost:3000 — Next.js frontend (development)
+ * - http://localhost:3001 — Alternative frontend port (development)
+ * <p>
+ * In production, replace these with the actual deployed frontend domain(s).
+ */
 @Configuration
 public class CorsConfig {
 
@@ -17,7 +26,7 @@ public class CorsConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:3001"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
         configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
